WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124473
JWK crypto key export result is a DOM string instead of an array buffer
https://bugs.webkit.org/show_bug.cgi?id=124473
Summary
JWK crypto key export result is a DOM string instead of an array buffer
Alexey Proskuryakov
Reported
2013-11-17 16:42:39 PST
I somehow made a typo in the code and also wrote a test that matched the wrong behavior :)
Attachments
proposed fix
(3.92 KB, patch)
2013-11-17 16:45 PST
,
Alexey Proskuryakov
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-11-17 16:45:49 PST
Created
attachment 217160
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2013-11-17 17:14:59 PST
Committed <
http://trac.webkit.org/r159392
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug